--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,15 @@
 version: '3'
 services:
-  www:
+  v2board:
     image: tokumeikoi/lcrp
     volumes:
-      - './www:/www'
-      - './wwwlogs:/wwwlogs'
-      - './caddy.conf:/run/caddy/caddy.conf'
-      - './supervisord.conf:/run/supervisor/supervisord.conf'
-      - './crontabs.conf:/etc/crontabs/root'
-      - './.caddy:/root/.caddy'
+      - '/root/V2Board/v2board-docker/www:/www'
+      - '/root/V2Board/v2board-docker/wwwlogs:/wwwlogs'
+      - '/root/V2Board/v2board-docker/caddy.conf:/run/caddy/caddy.conf'
+      - '/root/V2Board/v2board-docker/supervisord.conf:/run/supervisor/supervisord.conf'
+      - '/root/V2Board/v2board-docker/crontabs.conf:/etc/crontabs/root'
+      - '/root/V2Board/v2board-docker/caddy:/root/.caddy'
     ports:
       - '80:80'
       - '443:443'
     restart: always
-  mysql:
-    image: mysql:5.7.29
-    volumes:
-      - './mysql:/var/lib/mysql'
-    restart: always
-    environment: 
-      MYSQL_ROOT_PASSWORD: v2boardisbest
-      MYSQL_DATABASE: v2board
